events and emits

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <b>Chat App</b>
+    <form id="mf">
+        <input name="message" type="text" placeholder="Message">
+        <button>Send</button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
