--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
         <input name="message" type="text" placeholder="Message">
         <button>Send</button>
     </form>
+    <button id="sl">Send Location</button>
+    
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
 </body>
