chat page and join page added also rooms code added

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HiNet</title>
+    <link rel="icon" href="./img/icon.jfif">
+    <link rel="stylesheet" href="./css/styles.min.css">
 </head>
+
 <body>
-    <b>Chat App</b>
-    <form id="mf">
-        <input name="message" type="text" placeholder="Message">
-        <button>Send</button>
-    </form>
-    <button id="sl">Send Location</button>
-    
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/chat.js"></script>
+    <div class="centered-form">
+        <div class="centered-form__box">
+            <h1>Join any Chatroom</h1>
+            <form action="./chat.html">
+                <label>Display Name</label>
+                <input type="text" name="username" placeholder="Display Name" required>
+                <label>Room Name</label>
+                <input type="text" name="room" placeholder="Room Name" required>
+                <button>Join</button>
+            </form>
+
+        </div>
+    </div>
+   
 </body>
+
 </html>
